# vm-ft-contract

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs
